# aardvark.rendering

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  LICENSE  README.md  RELEASE_NOTES.md  ReleaseNotes.txt  _config.yml  addSources.fsx  archive.md  build.bat  build.cmd  build.fsx  build.sh  index.html  index.md  paket.dependencies  params.json  perfTest.bat  perfTest.fsx  publish.bat  startupResults.csv  unmount.sh
.claude/: CLAUDE.md
.config/: dotnet-tools.json
.github/workflows/: build.yml  glvm.yml  linux.yml  mac.yml  publish.yml  vkvm.yml  windows.yml
_includes/: google_analytics.html  head.html  sidebar.html
_layouts/: archive.html  default.html  page.html
_posts/: 2013-02-23-FSharp-end-to-end.html  2013-04-29-FSharp-and-raven-db.html  2013-04-29-Option-Operators.html  2014-07-20-Handling-constant-type-unsupported-in-type-providers.html  bla.html
ai/: APPLICATION.md  BACKENDS.md  CONSUMER-PATTERNS.md  CSHARP-INTEGRATION.md  DEBUG.md  NATIVE.md  README.md  RENDER-CORE.md  RENDER-PATTERNS.md  SG-CORE.md  SG-PATTERNS.md  SG-SEMANTICS.md  TEMPLATE-CONSUMER.md
code/: bla.md
data/aardvark/: README.md  aardva-c.tif  aardva-d.tif  aardva-n.tif  aardvark.mtl
docs/: TrafoUpdatePerformance.xlsx
output/: index.html
public/css/: hyde.css  tips.css
src/: Aardvark.Base.Rendering.sln  Aardvark.Rendering.NoExamples.NonWindows.sln  Aardvark.Rendering.NoExamples.NonWindows.slnf  Aardvark.Rendering.NoExamples.sln  Aardvark.Rendering.NoExamples.slnf  Aardvark.Rendering.NonWindows.sln  Aardvark.Rendering.NonWindows.slnf  Aardvark.Rendering.sln  GLVM.sln  TrafoUpdatePerformance.xlsx  index.md  nuget.config  vkvm.sln
src/Aardvark.Application/: Aardvark.Application.fsproj  IApplication.fs  IRenderControl.fs  Keyboard.fs  Mouse.fs  packages.config
src/Aardvark.Application.GL.WinForms/: Aardvark.Application.GL.WinForms.fsproj  MessageLoop.fs  RenderControl.fs
src/Aardvark.Application.WPF/: Aardvark.Application.WPF.fsproj  Keyboard.fs  RenderControl.fs
src/Aardvark.Application.WPF.GL/: Aardvark.Application.WPF.GL.fsproj
src/Aardvark.Application.WinForms/: Aardvark.Application.WinForms.fsproj  Keyboard.fs  Mouse.fs  RenderControl.fs  SimpleRenderWindow.fs
src/Aardvark.Application.WinForms.GL/: Aardvark.Application.WinForms.GL.fsproj  Application.fs  MessageLoop.fs  RenderControl.fs
src/Aardvark.Base.Rendering/: Aardvark.Base.Rendering.fsproj  AdaptiveResources.fs  BackendConfiguration.fs  Buffers.fs  Caches.fs  Camera.fs  ChangeableBuffer.fs  ChangeableResources.fs  ColorWriteMask.fs  ColoredLock.fs  Compute.fs  Config.fs  DefaultSemantic.fs  DefaultSurfaces.fs  DrawCallInfo.fs  DrawCallSet.fs  DrawCalls.fs  FShade.fs  FrameStatistics.fs  Framebuffers.fs  GeometryPool.fs  GridCell.fs  ImageTrafo.fs  IndexedGeometry.fs  IndexedGeometryPrimitives.fs  LoD.fs  LodTree.fs  Memory.fs  Ordered.fs  PixImageCube.fs  PrimitiveValueConverter.fs  ReferenceCountingSet.fs  RenderFragment.fs  RenderJob.fs  RenderObject.fs  RenderPass.fs  RenderTask.fs  ResourceManagement.fs  RunningMean.fs  Runtime.fs  (+13 more)
src/Aardvark.GLTF.Tests/: Program.fs
src/Aardvark.GPGPU/: Aardvark.GPGPU.fsproj  Jpeg.fs  Primitives.fs  RadixSort.fs  Segmentation.fs  Sorting.fs  TDistr.fs  Utilities.fs  paket.references  paket.template
src/Aardvark.Rendering/: Aardvark.Rendering.fsproj  DefaultSemantic.fs  paket.references  paket.template
src/Aardvark.Rendering.Common/: Aardvark.Rendering.Common.fsproj  ArrayVisitor.fs  DefaultSemantic.fs  IndexedGeometry.fs  paket.references  paket.template
src/Aardvark.Rendering.GL/: Aardvark.Rendering.GL.dll.config  Aardvark.Rendering.GL.fsproj  Trie.fs  app.config  packages.config  paket.references  paket.template
src/Aardvark.Rendering.ImGui/: API.fs  API.fsx  Aardvark.Rendering.ImGui.fsproj  DrawList.fs  Instance.fs  Platform.fs  README.md  RenderState.fs  Shader.fs  Textures.fs  Utilities.fs  paket.references  paket.template
src/Aardvark.Rendering.Interactive/: Aardvark.Rendering.Interactive.fsproj  AssemblyInfo.fs  DemoSetup.fsx  FsiSetup.fs  Interactive.fs  LoadReferences.fsx  NewSetup.fs  RenderingSetup.fs  Utilities.fs  paket.references  paket.template
src/Aardvark.Rendering.NanoVg/: Aardvark.Rendering.NanoVg.fsproj  Context.fs  Core.fs  DefaultOverlays.fs  RenderJobs.fs  RenderObjects.fs  Runtime.fs  Sg.fs  SvgParser.fs  paket.references  paket.template
src/Aardvark.Rendering.Text/: Aardvark.Rendering.Text.fsproj  Font.fs  FontSquirrel.fs  GoogleFonts.fs  Markdown.fs  Path.fs  PathSegment.fs  PathTessellator.fs  SceneGraph.fs  Text.fs  paket.references  paket.template
src/Aardvark.Rendering.Vulkan/: Aardvark.Rendering.Vulkan.dll.config  Aardvark.Rendering.Vulkan.fsproj  PreparedRenderObject.fs  ResourceManager.fs  Test.fs  paket.references  paket.template
src/Aardvark.Rendering.Vulkan.Wrapper/: Aardvark.Rendering.Vulkan.Wrapper.fsproj  Generator.fsx  Loader.fs  Types.fs  VKVM.fs  VMA.fs  VMA.fsx  Vulkan.fs  paket.references
src/Aardvark.Rendering.Vulkan2/: Aardvark.Rendering.Vulkan2.dll.config  Aardvark.Rendering.Vulkan2.fsproj  Commands.fs  Device.fs  Info.fs  Platform.fs  Program.fs  Utilities.fs  Vulkan.fs  paket.template
src/Aardvark.SceneGraph.Assimp/: Aardvark.SceneGraph.Assimp.fsproj  AssimpExporter.fs  Loader.fs  paket.references  paket.template
src/Aardvark.SceneGraph.Browser/: Aardvark.SceneGraph.Browser.fsproj  SceneGraph.fs  TextureTools.fs  paket.references  paket.template
src/Aardvark.SceneGraph.IO/: IO.fs  (+4 more)
src/GLVM/: CMakeLists.txt  HGL.cpp  Makefile  MakefileMac  ReadMe.txt  State.cpp  State.h  glext.h  glvm.cpp  glvm.h  glvm.vcxproj  glvm.vcxproj.filters  stdafx.cpp  targetver.h
src/VKVM/: CMakeLists.txt  Makefile.mac  ReadMe.txt  build.cmd  commands.cpp  commands.h  vkvm.cpp  vkvm.h  vkvm.vcxproj  vkvm.vcxproj.filters  vma.cpp
src/vkvm/: CMakeLists.txt  Makefile  commands.cpp  commands.h  stdafx.cpp  stdafx.h  vkvm.cpp  vkvm.h  vkvm.vcxproj  vkvm.vcxproj.filters  vma.cpp
tools/: FSharp.Literate.xml  fsformatting.exe.config
(+1462 files in other folders)
